--- a/express/.env
+++ b/express/.env
@@ -1,3 +1,10 @@
 NODE_ENV=development
 
 PORT=3000
+
+# database
+DB_PORT=5432
+DB_NAME=db_dev
+DB_HOST=localhost
+DB_USERNAME=postgres
+DB_PASSWORD=123456
