--- a/express/package.json
+++ b/express/package.json
@@ -14,19 +14,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.16",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.1",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^3.0.13",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
@@ -44,6 +52,7 @@
     "@middlewares": "dist/commons/middlewares",
     "@utilities": "dist/commons/utilities",
     "@entities": "dist/databases/entities",
-    "@libs": "dist/libs"
+    "@libs": "dist/libs",
+    "@routes/*": "dist/app/routes/*"
   }
 }
